--- a/lottery/package.json
+++ b/lottery/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@chainlink/contracts": "^0.3.1",
+    "dotenv": "^14.3.2",
     "hardhat": "^2.8.3"
   },
   "devDependencies": {
