Added better randomable NFT token, Wait for chainlink contract to dump to more recent version to be use with Openzeppelin

--- a/nft/package.json
+++ b/nft/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@chainlink/contracts": "^0.4.0",
+    "@chainlink/token": "^1.1.0",
     "@openzeppelin/contracts": "^4.5.0",
     "dotenv": "^16.0.0",
     "hardhat": "^2.8.4",
